Closed Bug 337752 Opened 18 years ago Closed 18 years ago

gcc 3.2.2 generates bad code for nsRunnableMethod<T>

Categories

(Core :: XPCOM, defect)

x86
All
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla1.9alpha1

People

(Reporter: darin.moz, Assigned: darin.moz)

Details

Attachments

(1 file)

gcc 3.2.2 generates bad code for nsRunnableMethod<T>

the problem goes away if I change the member variable from a nsRefPtr<T> to a T* and use manual addref and release.
Status: NEW → ASSIGNED
Attached patch v1 patchSplinter Review
This should do the trick.
Attachment #221839 - Flags: review?(benjamin)
Attachment #221839 - Flags: review?(benjamin) → review+
fixed-on-trunk
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
While people should check lxr / bonsai when they're about to make a change that "seems obvious and why didn't we do this in the first place", a comment near the NS_ADDREF and/or NS_RELEASE pointing to this bug to explain why we're not using a nsRefPtr there would be helpful, methinks.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: