fixes bug 337752 "gcc 3.2.2 generates bad code for nsRunnableMethod<T>" r=bsmedberg